# EVA-e-Guarani-EGOS

./: .eslintrc.js  .gitignore  .pre-commit-config.yaml  .pytest_cache  .venv  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  ROADMAP.md  archives  assets  css  cursor_initialization.md  dashboard.html  eva_guarani.code-workspace  jest.config.js  migration_analysis_20250401_084923.json  migration_analysis_20250401_085229.json  migration_log.txt  migration_log_20250401_084957.json  migration_verification_report.json  node_modules  package.json  phase1_migration_log.txt  phase2_migration_log.txt  phase3_migration_log.txt  pyproject.toml  requirements.txt  requirements.txt.bkp  setup.py  start_bios_q.bat  start_quantum_ecosystem.ps1  start_quantum_ecosystem.py  temp_files  tsconfig.json  web
.cursor/: cursor_initialization.md  force_mcp_connection.bat  mcp.json  mcp.json.backup  settings.json  verify_mcp_server.js
.cursor/mcp/: bios-q.json  perplexity.json  sequential-thinking.json
.cursor/rules/: ai_interaction_logging.mdc  commit_messages.mdc  error_handling.mdc  gitbash_commands.md  python_coding_standards.mdc  python_documentation.mdc  python_logging.mdc  quantum_prompt_core.md  quantum_prompt_core.mdc  security_practices.mdc  subsystem_boundaries.mdc  testing_standards.mdc  windows_powershell_commands.md
.ethik/: points_db.json
.obsidian/: graph.json
BIOS-Q/: README.md  quantum_prompt.txt
BIOS-Q/core/: initialize.py
BIOS-Q/tests/: test_initialize.py
QUANTUM_PROMPTS/: .initialized  README.implementation.md  README.md  __init__.py
QUANTUM_PROMPTS/.cursor/mcp/: bios-q.json
QUANTUM_PROMPTS/METADATA/tests/: test_metadata_manager.py
ROADMAPS/: README.md
ROADMAPS/active/: 20250330_slop_integration_roadmap.md  20250330_task_dynamic_roadmap_implementation.md  migration_plan_2025.md
ROADMAPS/templates/: task_roadmap_template.md
backups/atlas_backup_20250401_084331/: README.implementation.md  roadmap.md
backups/atlas_backup_20250401_084331/scripts/: atlas_requirements.txt
backups/atlas_backup_20250401_084331/tests/: __init__.py  test_quantum_visualization.py
backups/cronos_backup_20250401_084211/: README.md  file_unification.py  metadata_system.md  roadmap.md
backups/cronos_backup_20250401_084211/core/: __init__.py  context_monitor.py
backups/cronos_backup_20250401_084211/scripts/: load.bat  metadata_unification.py  save.bat  start_monitor.bat
backups/cronos_backup_20250401_084325/: backup_simple.py  check_backup.py
backups/cronos_backup_20250401_084325/config/: monitor_data.json
backups/cronos_backup_20250401_084325/saves/: context_20250326_135011.json
backups/cronos_backup_20250401_084325/scripts/: load.bat
backups/ethik_backup_20250401_084406/: roadmap.md  setup_session.txt  validator.py
backups/harmony_backup_20250401_084406/: README.implementation.md  roadmap.md
backups/koios_metadata_backup_20250401_084203/: requirements.txt  store.py
backups/koios_metadata_backup_20250401_084203/metrics/: metrics-2025-03-29.json
backups/koios_metadata_backup_20250401_084203/tests/: test_metadata_manager.py
backups/koios_processes/: BIOS-Q-001_Unificacao_Sistema_Core.md_20250401_085627  KOIOS-001_Evolucao_Sistema.md_20250401_085627  MASTER-001_Implementacao_Fluida.md_20250401_085627  MASTER-001_Unificacao_Sistema_Central.md_20250401_085627  MIGRATION-001_Sistema_Migracao_Subsistemas.md_20250401_085627  PATTERN-001_Padrao_Nomenclatura_Sistema.md_20250401_085627  TS-JEST-001_Resolucao_Problemas_Jest_TypeScript.md_20250401_085627  template_processo.md_20250401_085627
backups/nexus_backup_20250401_084331/: README.implementation.md  analyzer.py  quantum_prompt.md  roadmap.md
backups/quantum_prompts_backup_20250401_083729/ATLAS/: mycelium_monitor.js  visualizer.py
backups/quantum_prompts_backup_20250401_083729/BIOS-Q/: .gitignore  bootloader.cfg  context_boot_sequence.py  dynamic_roadmap.py  hardware_map.json  (+5 more)
config/: .env  api_keys.example.json
core/: README.md
data/: README.md
docs/: ARCHITECTURE.md  MQP.md  MYCELIUM_INTEGRATION.md
docs/historical_changelogs/: BACKUP quantico.txt  BIOS-Q Cursor sistema EVA.txt  BIOS-Q MCP.txt  BOT ok melhorando.txt  Backup system.txt  Dinamicidade no sistema.txt  EGOS 1.0.txt  EVA & GUARANI - Quantum Unified Master Prompt 2024 (Versão 8.0).txt  EVA 7.3.txt  Filesystem SLOP.txt  Instalaçao EVA.txt  Integraçao Cursor e Eva.txt  Integraçao Eliza.txt  Integraçao sistema quantico com bot.txt  MATRIZ  quantica.txt  MCP OK avanços e futuro.txt  MCP grande avanço roadmap.txt  Melhorias BOT telegram.txt  Mycelium atualizado.txt  NEXUS elovuindo MUITO.txt  NEXUS_MODULAR.md  PLANO DE NEGOCIO EVA (1).txt  PLANO DE NEGOCIO EVA (11).txt  Panorama sistema TODO.txt  Personas no bot.txt  Plano reorganizaçao pastas.txt  Prometheus Grafana.txt  Prompt Quantico 7.0 EGOS.txt  Prompt quantico 7.5.txt  Prompts quanticos EGOS.txt  Promtps quanticos v7.txt  Quantum prompt 7.5 OK.txt  Quantum prompt 8.0 BIOS-Q.txt  Quantum unification.txt  ROADMAP.txt  RPG EVA.txt  Reorganizaçao do sistem EVA e Guarani.txt  SLOP integration proximos passos potencial.txt  ULTIMA quase tudo revisado.txt  Unification ETHIK.txt  (+14 more)
examples/sandbox/: run_sandbox.bat  run_sandbox.py
modules/: README.md
modules/translator_dev/: README.md  requirements.txt  translator.py
research/: Scraper com IA.txt
scripts/: fix_linting.py  install_dependencies.bat
src/data/: eva_guarani_config.example.json
src/tests/: test_perplexity_models.py
subsystems/: __init__.py
subsystems/ATLAS/: README.md  __init__.py  service.py
subsystems/CORUJA/: README.md
subsystems/CRONOS/: README.md  __init__.py  service.py
subsystems/ETHIK/: README.md  __init__.py  service.py
subsystems/KOIOS/: README.md
subsystems/MYCELIUM/: README.md
subsystems/NEXUS/: README.md  service.py  test_nexus.ps1
tools/: add_metadata.bat
tools/launchers/: start_perplexity_mcp.bat
tools/mcp/: save.bat
tools/scripts/: prepare_unified_migration.bat  start_eva_guarani_unified.bat  start_unified_bot.bat  test_ETHIK-VERIFY-001_verificacao_migracao.py
(+1892 files in other folders)
